...
//        self.testSetUp()
        
        NotificationCenter.default.addObserver(self, selector: #selector(self.gotChatList), name: .webSocketGetMessagesForChatList, object: nil)
        NotificationCenter.default.addObserver(self, selector: #selector(self.getChatList), name: .webSocketDidConnect, object: nil)
        NotificationCenter.default.addObserver(self, selector: #selector(self.logOut), name: .webSocketAuthNotif, object: nil)
        
        tableView.accessibilityLabel = "chatListTableView"
        
        self.getChatList()
    }
    
    // MARK: - Test
    func testSetUp()
...
